--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "t
 url     : # the base hostname & protocol for your site e.g.
 baseurl : # does not include hostname
 title   : ReFantasy
-description: > # this means to ignore newlines until "Language & timezone"
+description:  # this means to ignore newlines until "Language & timezone"
   
 
 
