--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,19 +23,20 @@ header:
       fr-LU   : *FR
       # @end locale config
     url: /archive
+    
 
   - titles:
       # @start locale config
-      en      : &EN       Me
+      en      : &EN       Resource
       en-GB   : *EN
       en-US   : *EN
       en-CA   : *EN
       en-AU   : *EN
-      zh-Hans : &ZH_HANS  关于
+      zh-Hans : &ZH_HANS  资源
       zh      : *ZH_HANS
       zh-CN   : *ZH_HANS
       zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  關於
+      zh-Hant : &ZH_HANT  資源
       zh-TW   : *ZH_HANT
       zh-HK   : *ZH_HANT
       ko      : &KO       소개
@@ -47,4 +48,29 @@ header:
       fr-FR   : *FR
       fr-LU   : *FR
       # @end locale config
+    url: /resource
+    
+  - titles:
+     # @start locale config
+     en      : &EN       Me
+     en-GB   : *EN
+     en-US   : *EN
+     en-CA   : *EN
+     en-AU   : *EN
+     zh-Hans : &ZH_HANS  关于
+     zh      : *ZH_HANS
+     zh-CN   : *ZH_HANS
+     zh-SG   : *ZH_HANS
+     zh-Hant : &ZH_HANT  关于
+     zh-TW   : *ZH_HANT
+     zh-HK   : *ZH_HANT
+     ko      : &KO       소개
+     ko-KR   : *KO
+     fr      : &FR       À propos
+     fr-BE   : *FR
+     fr-CA   : *FR
+     fr-CH   : *FR
+     fr-FR   : *FR
+     fr-LU   : *FR
+     # @end locale config
     url: /me
