--- a/_config.yml
+++ b/_config.yml
@@ -223,3 +223,11 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jemoji
+
+# 压缩css
+sass:
+    style: compressed
+    
+compress_html:
+    blanklines: true
+    comments: ["<!-- ", " -->"]
